[package]
name = "python3-dll-a"
version = "0.1.0"
edition = "2021"
description = "Standalone python3.dll import library generator"
repository = "https://github.com/ravenexp/python3-dll-a"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
license = "MIT"
keywords = ["build-dependencies", "python", "windows", "mingw"]
categories = ["development-tools::build-utils"]
readme = "README.md"
